Update Unity asset URLs to use CDN

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
     createUnityInstance(document.querySelector("#unity-canvas"), {
       arguments: [],
-      dataUrl: "Build/web_1.2.0.data",
-      frameworkUrl: "Build/web_1.2.0.framework.js",
-      codeUrl: "Build/web_1.2.0.wasm",
+      dataUrl: "https://cdn.jsdelivr.net/gh/gamebackup/looproulette@main/Build/web_1.2.0.data",
+      frameworkUrl: "https://cdn.jsdelivr.net/gh/gamebackup/looproulette@main/Build/web_1.2.0.framework.js",
+      codeUrl: "https://cdn.jsdelivr.net/gh/gamebackup/looproulette@main/Build/web_1.2.0.wasm",
       streamingAssetsUrl: "StreamingAssets",
       companyName: "xsedim",
       productName: "looproulette",
